<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formulario_de_registro"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        />


    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/et_nombre"
    android:hint="@string/ingrese_el_nombre"
    android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_correo"
        android:hint="@string/ingrese_el_correo"
        android:inputType="textEmailAddress"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_telefono"
        android:hint="@string/ingrese_el_telefono"
        android:inputType="number"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_contrasena"
        android:hint="@string/ingrese_la_contrasena"
        android:inputType="textPassword"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_recontrasena"
        android:hint="@string/repita_contrasena"
        android:inputType="textPassword"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:id="@+id/rb_masculino"
            android:checked="true">
        </RadioButton>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/femenino"
            android:id="@+id/rb_femenino">
        </RadioButton>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/ch_jugarf"
        android:text="@string/jugar_futbol" />
        <CheckBox
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/ch_cine"
        android:text="@string/cine"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <CheckBox
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/ch_vertv"
        android:text="@string/ver_tv" />
        <CheckBox
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/ch_pasearenbici"
        android:text="@string/pasear_bici" />

        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_fechanac"
        android:text="@string/Ingrese_fecha"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/darkblue" />



    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_ciudad"
        android:prompt="@string/seleccione_lugarde_nacimiento"
        android:spinnerMode="dialog"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_enviar"
        android:background="@color/deepskyblue"
        android:textColor="@color/darkblue"
        android:text="@string/enviar"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_datosingresados"
        android:text="@string/datos_ingresados"
        android:textAlignment="textStart"
        android:textColor="@color/darkblue" />







</LinearLayout>
</ScrollView>

